--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "rpi-led-matrix",
   "version": "1.11.1",
   "description": "Node.js/Typescript bindings for hzeller/rpi-rgb-led-matrix",
